--- a/index.html
+++ b/index.html
@@ -12,16 +12,22 @@
             <input type="text" class="input-screen">
         </div>
         <div class="row">
+            <button class="modified-btn on">ON</button>
+            <button class="modified-btn off">OFF</button>
+            <button class="modified-btn delete">DEL</button>
+            <button class="modified-btn clear">CLR</button>
+        </div>
+        <div class="row">
             <button class="btn">7</button>
             <button class="btn">8</button>
             <button class="btn">9</button>
-            <button class="btn">÷</button>
+            <button class="btn">/</button>
         </div>
         <div class="row">
             <button class="btn">4</button>
             <button class="btn">5</button>
             <button class="btn">6</button>
-            <button class="btn">x</button>
+            <button class="btn">*</button>
         </div>
         <div class="row">
             <button class="btn">1</button>
@@ -37,6 +43,8 @@
         </div>
 
     </div>
+
+    <script src="./script.js"></script>
 
 </body>
 
